<resources>
    <string name="password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="auth">0123456789X</string>
    <string name="main_square">首页</string>
    <string name="main_shop">商城</string>
    <string name="main_little_video">短视频</string>
    <string name="main_source">溯源</string>
    <string name="main_live">直播</string>
    <string name="main_car">&#160;&#160;购物车</string>
    <string name="main_msg">消息</string>
    <string name="main_near">附近</string>
    <string name="main_mine">我的</string>
    <string name="audience_money">鸟蛋</string>
    <string name="anchor_money">鸟巢</string>
    <string name="no_data">暂无内容哦~</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="loading">加载中...</string>
    <string name="rechargeing">正在充值...</string>
    <string name="send">发送</string>
    <string name="upload_succeed">上传成功</string>
    <string name="upload_fail">上传失败</string>
    <string name="succeed">成功</string>
    <string name="exchange_succ">转换成功</string>
    <string name="save">保存</string>
    <string name="male">男</string>
    <string name="woman">女</string>
    <string name="person">人</string>
    <string name="circle_of_friends">朋友圈</string>
    <string name="qq_space">QQ空间</string>
    <string name="second">次</string>
    <string name="login_regi_pro">用户注册协议</string>
    <string name="pwd">请输入密码</string>
    <string name="log_title">登录</string>
    <string name="log_register">注册</string>
    <string name="finish">完成</string>
    <string name="save_local">保存到本地</string>
    <string name="is_forget_password">忘记密码?</string>
    <string name="log_input_phone">请输入手机号</string>
    <string name="log_input_ver">请输入验证码</string>
    <string name="log_input_nick">请输入昵称</string>
    <string name="log_input_yqm">请输入邀请码</string>
    <string name="log_input_yzm">验证码错误</string>
    <string name="please_input_pwd">请输入6-16位登录密码</string>
    <string name="send_mess_suc">验证码已发送，请注意查收</string>
    <string name="log_aggre">登录代表您已同意</string>
    <string name="log_pro">点E点服务及隐私条款</string>
    <string name="youbo_pro">《点E点用户协议》</string>
    <string name="youbo_pro_title">点E点用户协议</string>
    <string name="pwd1">密码</string>
    <string name="change_pwd1">修改密码</string>
    <string name="log_comple">完成</string>
    <string name="log_register_read">注册代表您已同意</string>
    <string name="rgst_retrieved_send">重新发送</string>
    <string name="rgst_get_captcha">获取验证码</string>
    <string name="fgtpwd_title">忘记密码</string>
    <string name="fgtpwd_find_pwd_succeed">找回密码成功</string>
    <string name="input_new_phone">请输入新的手机号</string>
    <string name="pwd_not_match">两次密码输入不一致</string>
    <string name="main_audio_unable_to_live">未开启音频权限，无法进行直播!</string>
    <string name="main_camera_unable_to_live">未开启摄像头权限，无法进行直播!</string>
    <string name="main_camera_or_audio_unable_to_live">未开启摄像头或音频权限，无法进行直播!</string>
    <string name="main_look_at">在看</string>
    <string name="main_liveing">直播中</string>
    <string name="back">回放</string>
    <string name="main_hot">热门</string>
    <string name="main_new">最新</string>
    <string name="home_no_live_data">暂时还没有直播</string>
    <string name="home_no_earning_data">暂时没有收益</string>
    <string name="search_title">搜索</string>
    <string name="search_on_follow">已关注</string>
    <string name="contri_con">鸟巢</string>
    <string name="contri_time">分钟</string>
    <string name="letter_not_empty">请输入私信内容</string>
    <string name="phone_account">手机号格式有误</string>
    <string name="phone_account_true">请输入正确手机号</string>
    <string name="phone">手机号:</string>
    <string name="code">验证码:</string>
    <string name="nick">昵&#160;&#160;&#160;&#160;称:</string>
    <string name="hint_password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="mine_myaccount">我的账户</string>
    <string name="mine_my_fans">我的粉丝</string>
    <string name="mine_my_follow">我的关注</string>
    <string name="id_clip">ID号已复制到剪切板</string>
    <string name="get_mon">到账金额</string>
    <string name="str_clear_cache_title">清理缓存</string>
    <string name="str_clear_cache_info">是否清除缓存?</string>
    <string name="str_clear_cache_succ">清理成功</string>
    <string name="str_download_wait">正在下载中，请等待...</string>
    <string name="str_bind_phone">绑定手机号</string>
    <string name="set_pwd">设置密码</string>
    <string name="set_pwd_suc">设置密码成功！</string>
    <string name="str_my_control">我的场控</string>
    <string name="cancel_admin">取消场控</string>
    <string name="str_black_list">黑名单</string>
    <string name="str_help_tickl">帮助与反馈</string>
    <string name="str_exit_out">退出</string>
    <string name="str_edit_phone_title">修改手机号</string>
    <string name="str_alter_succeed">修改成功</string>
    <string name="edit_head_portrait">头像</string>
    <string name="edit_nick">用户名</string>
    <string name="edit_gender">性别</string>
    <string name="edit_secrecy">保密</string>
    <string name="edit_signature">签名</string>
    <string name="edit_position">所在地</string>
    <string name="edit_alter_nick">昵称</string>
    <string name="edit_user_nick">修改昵称</string>
    <string name="please_input_sign">请输入签名</string>
    <string name="edit_nick_limit_size">请输入昵称</string>
    <string name="edit_nick_limit_oversize">昵称长度不能大于20位</string>
    <string name="edit_save_succeed">保存成功</string>
    <string name="edit_save_fail">保存失败</string>
    <string name="edit_input_nick">输入昵称</string>
    <string name="edit_select_date">选择日期</string>
    <string name="edit_alter_signature_title">个人签名</string>
    <string name="edit_limit_signature_oversize">请不要在签名中泄露过多个人信息</string>
    <string name="letter_ignore">忽略未读</string>
    <string name="my_let">我的私信</string>
    <string name="real_name">姓名</string>
    <string name="real_phone">手机号码</string>
    <string name="real_phone_verify_code">手机验证码</string>
    <string name="real_id_card">身份证号</string>
    <string name="real_notice">温馨提示</string>
    <string name="profit_title">我的收益</string>
    <string name="profit_exchange_record">转换记录</string>
    <string name="profit_received">收到鸟巢</string>
    <string name="profit_amount_raised">可以提现金额(元)</string>
    <string name="cash_withdrawal_instructions">提现兑换说明</string>
    <string name="stop_share_title">把直播成就分享给朋友</string>
    <string name="back_share_title">精彩回放要及时分享,过期会被删除哦~</string>
    <string name="share">分享</string>
    <string name="exchange_title">转换鸟蛋</string>
    <string name="today_month_detailed">最近30天收入明细</string>
    <string name="refill_order_empty">订单信息为空!</string>
    <string name="refill_succeed">支付成功!</string>
    <string name="refill_result_unknown">支付结果未知!</string>
    <string name="refill_fail">订单支付失败!</string>
    <string name="refill_repeat_request">重复请求!</string>
    <string name="refill_on_cancel">支付已取消!</string>
    <string name="bill_receipt">收礼</string>
    <string name="bill_gifts">送礼</string>
    <string name="bill_jingyan">经验</string>
    <string name="bill_withdraw">兑换银币</string>
    <string name="send_one">送给了你1个</string>
    <string name="receive">收到</string>
    <string name="send_ta">赠送给</string>
    <string name="send_to">送给了</string>
    <string name="one">个</string>
    <string name="bill_no_rechar_data">暂时还没有充值记录</string>
    <string name="bill_no_withdraw_data">暂时还没有兑换记录</string>
    <string name="bill_wait_pay">等待支付</string>
    <string name="live_say_someting">说点什么</string>
    <string name="live_follow_succeed">关注成功</string>
    <string name="live_exit">确认退出直播间吗?</string>
    <string name="live_gift">礼物</string>
    <string name="live_count_down">连击</string>
    <string name="live_report">举报</string>
    <string name="live_start">开始直播</string>
    <string name="add_fri_tips">关注即可不错过TA的最新动态</string>
    <string name="readed">全部标为已读</string>
    <string name="end_live_time">直播时长</string>
    <string name="end_watch_num">观看人数</string>
    <string name="end_rec_prise">收到赞</string>
    <string name="back_stop">回放结束</string>
    <string name="account_repeat_login">您的账号与%1$s在另一台手机登录,如非本人操作,则密码可能已经泄露,建议修改密码。</string>
    <string name="delete_success">删除成功</string>
    <string name="follow_anchor">关注主播</string>
    <string name="follow_liveing">正在直播(</string>
    <string name="delete_msg_tip">确认删除消息？</string>
    <string name="delete_msg">删除消息</string>
    <string name="no_intro">这个人太忙了，忘记签名了~</string>
    <string name="phone_verify">手机号验证</string>
    <string name="exch_apply_detail">兑换申请详情</string>
    <string name="erevoke_exc">确定撤销此次兑换申请？</string>
    <string name="erevoke_suc">撤销成功!</string>
    <string name="to_set">去设置</string>
    <string name="no_wifi">当前网络无WiFi,可能会被运营商收取流量费用</string>
    <string name="no_network">联网失败,请检查手机网络状态</string>
    <string name="incorr_idcard">请输入正确的身份证号码</string>
    <string name="bind_success">绑定成功！</string>
    <string name="user_exchange_pro">用户充值协议</string>
    <string name="not_find_file">文件没有找到</string>
    <string name="not_find_img">图片未找到</string>
    <string name="start_play">开始播放</string>
    <string name="ensure_send_redbag">是否确定发送%1$s鸟蛋红包？</string>
    <string name="redbag_num_money">%1$s个红包，共%2$s鸟蛋</string>
    <string name="check_net">无网络服务,请检查您的网络</string>
    <string name="account">账号</string>
    <string name="name">姓名</string>
    <string name="phone_num">手机号</string>
    <string name="search_hint">输入店铺ID和关键词搜索</string>
    <string name="verify_phone_to_safe">验证手机号以保证您的账号安全</string>
    <string name="exchange_account">兑换账户</string>
    <string name="can_exchange_money">可兑换收益(元):</string>
    <string name="arrival_amount">到账金额</string>
    <string name="withdraw_1">1、请认真填写申请表单，提交后我们会在1~3个工作日内审核。</string>
    <string name="withdraw_2">2、支付宝转账，单次最高限额5W元。</string>
    <string name="notice">说明：</string>
    <string name="this_live_stop">本场直播已结束</string>
    <string name="more_live">更多精彩直播</string>
    <string name="input_real_name">请填写真实姓名</string>
    <string name="input_real_phone">请填写可以联系到您的手机号</string>
    <string name="input_real_phone_verifycode">请填写验证码</string>
    <string name="input_real_idcard">请填写身份证号</string>
    <string name="upload_idcard_photo">请上传身份证正反面及手持证件正面照</string>
    <string name="idcard_posi">身份证正面照</string>
    <string name="idcard_nega">身份证反面照</string>
    <string name="idcard_handle">手持证件正面照</string>
    <string name="idcard_hand_tip">本人手持证件照示例（证件照片与号码清晰可辨）</string>
    <string name="is_agree">是否同意</string>
    <string name="start_live_rule">《开播规则协议》</string>
    <string name="start_live_rule_title">开播规则协议</string>
    <string name="bind_ali_text">绑定的支付宝将成为您的提现账户</string>
    <string name="bind_ali_reminder">友情提示：支付宝账号为手机或邮箱账号，请确保您的支付宝账号正确，否则有可能无法进行提现操作</string>
    <string name="binded_phone">已绑定的手机号</string>
    <string name="change_pho">更换手机号</string>
    <string name="first_step">第一步</string>
    <string name="bind_we">请绑定微信</string>
    <string name="wechat_is_withdraw">绑定的微信将成为你的提现账户</string>
    <string name="second_step">第二步</string>
    <string name="follow_wechat">请关注微信</string>
    <string name="wechat_gloabl">微信公众号：点E点</string>
    <string name="input_curr_pwd">请输入当前登录密码</string>
    <string name="change_phone_tip">更换手机后，下次登录可使用新手机号登录</string>
    <string name="current_password">请输入当前登录密码</string>
    <string name="verify_phon">验证手机号</string>
    <string name="log_out_nitify">下线通知</string>
    <string name="ok">好</string>
    <string name="empty_nothing">空空如也啥也没有</string>
    <string name="my_download">我的下载</string>
    <string name="empty_music">~还未下载任何歌曲~</string>
    <string name="music_hit"> 想唱什么就搜什么</string>
    <string name="other_get_way">其他获取方式</string>
    <string name="hint">提示</string>
    <string name="live_time">开播时长</string>
    <string name="live_people_number">最高在线</string>
    <string name="receiver_zan">新增订单</string>
    <string name="end_on_live">直播已结束</string>
    <string name="get_virtual_coin">收获%1$s</string>
    <string name="add_new_fouce">新增关注</string>
    <string name="end_chengjiu">本场直播成就</string>
    <string name="go_to_home">返回首页</string>
</resources>