<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_live"
    android:fitsSystemWindows="true"
    android:gravity="center_vertical"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:src="@mipmap/close_single"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:drawableLeft="@drawable/left_live"
        android:drawablePadding="@dimen/dp_10"
        android:drawableRight="@drawable/right_live"
        android:gravity="center"
        android:text="@string/end_on_live"
        android:textColor="@color/comm_text_color_main"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_60"
        android:text="@string/end_chengjiu"
        android:textColor="@color/white"
        android:textSize="17sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_28"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minWidth="@dimen/dp_50"
            android:text="@string/live_time"
            android:textColor="@color/white"
            android:textSize="@dimen/comm_text_size" />

        <TextView
            android:id="@+id/tv_live_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="00:00:00"
            android:textColor="@color/white"
            android:textSize="@dimen/comm_text_size_s" />
    </LinearLayout>

    <TextView
        android:id="@+id/mTvShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dp_10"
        android:text="因视频时间较短，本次直播不予生成回放"
        android:textColor="@color/comm_text_color_black_ss"
        android:textSize="@dimen/comm_text_size_s" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_56"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/mLlAddOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_zan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/comm_title_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/design_margin"
                android:gravity="left"
                android:text="@string/receiver_zan"
                android:textColor="@color/white"
                android:textSize="@dimen/comm_text_size" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_people_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/comm_title_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/design_margin"
                android:text="@string/live_people_number"
                android:textColor="@color/white"
                android:textSize="@dimen/comm_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mTvFocus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/comm_title_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/design_margin"
                android:text="@string/add_new_fouce"
                android:textColor="@color/white"
                android:textSize="@dimen/comm_text_size" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_u_piao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="@dimen/comm_title_text_size" />

            <TextView
                android:id="@+id/mTvCoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/design_margin"
                android:text="@string/get_virtual_coin"
                android:textColor="@color/white"
                android:textSize="@dimen/comm_text_size" />


        </LinearLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/mTvGOHome"
        android:layout_width="140dp"
        android:layout_height="@dimen/dp_44"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_60"
        android:background="@drawable/shape_soild_main_30"
        android:gravity="center"
        android:text="@string/go_to_home"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>