<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/def_height"
        android:layout_marginRight="@dimen/def_height"
        android:layout_marginTop="@dimen/dp_56"
        android:visibility="gone"

        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/item_bg_color"
            android:text="@string/phone_area"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:textColor="@color/color_999999"
            android:textColorHint="@color/color_999999"
            android:textSize="14sp"/>
        <TextView
            style="@style/comm_text"
            android:text="中国+86"
            android:layout_marginLeft="@dimen/dp_10"
            android:drawableRight="@drawable/next"
            android:drawablePadding="@dimen/dp_10"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/def_height"
        android:layout_marginRight="@dimen/def_height"
        android:visibility="gone"
        android:layout_height="0.5dp"
        android:background="@color/line_bg" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/def_height"
        android:layout_marginRight="@dimen/def_height"
        android:layout_marginTop="@dimen/dp_56"
        android:background="?attr/item_bg_color"
        android:gravity="center"
        android:orientation="horizontal">


        <com.hn.library.view.HnEditText
            android:id="@+id/for_phone_et"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="?attr/item_bg_color"
            android:hint="@string/log_input_phone"
            android:inputType="number"
            android:lines="1"
            android:paddingBottom="15dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:textColor="@color/comm_text_color_black"
            android:textColorHint="@color/color_999999"
            android:textSize="14dp"
            app:content_length="11"
            />


        <TextView
            android:id="@+id/for_code_btn"
            android:layout_width="100dp"
            android:layout_height="34dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:textColor="@color/sel_but_main"
            android:background="@drawable/verify_shape_main"
            android:text="@string/rgst_get_captcha"
            android:textSize="14dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/def_height"
        android:layout_marginRight="@dimen/def_height"
        android:layout_height="0.5dp"
        android:background="@color/line_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="?attr/item_bg_color"
        android:layout_marginLeft="@dimen/def_height"
        android:layout_marginRight="@dimen/def_height"
        android:orientation="horizontal">

        <com.hn.library.view.HnEditText
            android:id="@+id/for_code_et"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/item_bg_color"
            android:hint="@string/log_input_ver"
            android:inputType="number"
            android:lines="1"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:textColor="@color/comm_text_color_black"
            android:textColorHint="@color/color_999999"
            android:textSize="14dp"
            app:content_length="8"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/def_height"
        android:layout_marginRight="@dimen/def_height"
        android:layout_height="0.5dp"
        android:background="@color/line_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/def_height"
        android:layout_marginRight="@dimen/def_height"
        android:background="?attr/item_bg_color"
        android:orientation="horizontal">




        <com.hn.library.view.HnEditText
            android:id="@+id/for_password_et"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="?attr/item_bg_color"
            android:digits="@string/password"
            android:hint="@string/please_input_pwd"
            android:inputType="textPassword"
            android:lines="1"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:layout_marginRight="@dimen/dp_10"
            android:textColor="@color/comm_text_color_black"
            android:textColorHint="@color/color_999999"
            android:textSize="14dp"
            app:content_length="16"/>

        <ImageView
            android:id="@+id/iv_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:src="@drawable/eye_off"/>

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/def_height"
        android:layout_marginRight="@dimen/def_height"
        android:layout_height="0.5dp"
        android:background="@color/line_bg" />
    <TextView
        android:id="@+id/for_longin_btn"
        android:layout_width="140dp"
        android:layout_height="@dimen/dp_39"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_45"
        android:background="@drawable/shape_violet_bg_recentage"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/finish"
        android:textColor="@color/comm_text_color_black"/>
</LinearLayout>